# program-Olalolo22

./: .gitignore  PROJECT_DESCRIPTION.md
anchor_project/: Dockerfile  README.md
anchor_project/tip_project/: Anchor.toml  buffer.json  package-lock.json  package.json
anchor_project/tip_project/programs/tip_project/: Cargo.toml
anchor_project/tip_project/programs/tip_project/src/: lib.rs
anchor_project/tip_project/tests/: tip_project.ts
frontend/: .env  README.md  config-overrides.js  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  idl.json  index.css  index.tsx
frontend/src/components/: CustomWalletButton.tsx  Header.tsx  TipForm.tsx
frontend/src/hooks/: useAnchor.ts
frontend/src/utils/: solana.ts
